crates/carta/tests/snapshots/golden_writer__typst__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
/ term: #block[
- alpha
- beta
]
