crates/carta/tests/snapshots/golden_writer__typst__common__list-bullet-in-ordered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
+ first
+ second

  - suba
  - subb
+ third
