crates/carta/tests/snapshots/golden_writer__typst__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#emph[emph with #strong[strong] inside] end
