crates/carta/tests/snapshots/golden_writer__typst__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#block[
#set enum(numbering: "(1)", start: 1)
+ first
+ second
]
