crates/carta/tests/snapshots/golden_writer__typst__common__ordered-lower-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#block[
#set enum(numbering: "a.", start: 1)
+ one
+ two
]
