crates/carta/tests/snapshots/golden_writer__typst__common__ordered-lower-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#block[
#set enum(numbering: "i.", start: 1)
+ one
+ two
]
