crates/carta/tests/snapshots/golden_writer__typst__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
+ outer

  + inner one
  + inner two
