crates/carta/tests/snapshots/golden_writer__typst__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
​#highlight[x]<theid> term
